--- a/app/src/main/res/drawable/style_test_btn.xml
+++ b/app/src/main/res/drawable/style_test_btn.xml
@@ -1,33 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_focused="false" android:state_pressed="false">
+    <item
+        android:id="@+id/hovered"
+        android:state_hovered="true">
         <shape android:shape="rectangle">
-            <gradient android:angle="0" android:endColor="#0E831A" android:startColor="#11BE28" />
-            <stroke android:width="2dp" android:color="#C0C0C0" />
-            <corners android:radius="2dp" />
+            <gradient
+                android:angle="0"
+                android:endColor="#331c7f"
+                android:startColor="#0788ee" />
+            <corners android:radius="70dp" />
+            <stroke
+                android:width="3dp"
+                android:color="#FF0099FF" />
         </shape>
     </item>
 
-    <item android:state_focused="true">
+    <item
+        android:state_pressed="true">
         <shape android:shape="rectangle">
-            <gradient android:angle="0" android:endColor="#0E831A" android:startColor="#11BE28" />
-            <stroke android:width="2dp" android:color="#C0C0C0" />
-            <corners android:radius="2dp" />
+            <gradient
+                android:angle="0"
+                android:endColor="#331c7f"
+                android:startColor="#0788ee" />
+            <corners android:radius="70dp" />
+            <stroke
+                android:width="3dp"
+                android:color="#FF0099FF" />
         </shape>
     </item>
 
-    <item android:state_focused="false">
+    <item
+        android:state_focused="true">
         <shape android:shape="rectangle">
-            <gradient android:angle="0" android:endColor="#0E831A" android:startColor="#11BE28" />
-            <stroke android:width="2dp" android:color="#C0C0C0" />
-            <corners android:radius="2dp" />
+            <gradient
+                android:angle="0"
+                android:endColor="#331C7F"
+                android:startColor="#0788EE" />
+            <stroke
+                android:width="3dp"
+                android:color="#FF0099FF" />
+            <corners android:radius="70dp" />
         </shape>
     </item>
 
-    <item android:state_pressed="true">
+    <item>
         <shape android:shape="rectangle">
-            <gradient android:angle="0" android:endColor="#331c7f" android:startColor="#0788ee" />
+            <gradient
+                android:angle="0"
+                android:endColor="#0E831A"
+                android:startColor="#11BE28" />
+            <stroke
+                android:width="3dp"
+                android:color="#04FF00" />
+            <corners android:radius="70dp" />
         </shape>
     </item>
 
