--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -17,10 +17,12 @@
         tools:context=".ui.firstwindow.FirstFragment">
 
         <ImageView
+            android:id="@+id/bg_image"
+            android:onClick="@{() -> viewmodel.onBackgroundClick()}"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/avatar"/>
+            android:src="@drawable/background_snow"/>
 
         <TextView
             android:id="@+id/nameTextView"
@@ -94,47 +96,54 @@
             android:layout_width="113dp"
             android:layout_height="115dp"
             android:layout_marginTop="16dp"
-            android:src="@drawable/avatar"
+            android:src="@drawable/avatar2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/nameEditText"
             app:layout_constraintTop_toTopOf="@+id/nameTextView" />
 
-        <Button
-            android:onClick="@{viewmodel::onTestButtonClick}"
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="140dp"
+            android:layout_height="40dp"
             android:layout_marginTop="12dp"
-            android:text="Button"
+            android:background="@drawable/style_test_btn"
+            android:onClick="@{() -> viewmodel.onTestButtonClick()}"
+            android:text="Test"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textEditView" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
+            android:onClick="@{() -> viewmodel.onLaunchButtonClick()}"
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Button"
+            android:layout_width="140dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="14dp"
+            android:text="Launch"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:background="@drawable/style_launch_btn"
             app:layout_constraintStart_toStartOf="@+id/button"
             app:layout_constraintTop_toBottomOf="@+id/button" />
 
-        <Button
+        <ImageButton
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:text="Button"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintEnd_toStartOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
-        <Button
+        <ImageButton
             android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="Button"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="@+id/imageView2" />
@@ -144,7 +153,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="20dp"
-            android:src="@drawable/avatar"
+            android:src="@drawable/fjb4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button2" />
