--- a/app/src/main/res/drawable/style_textedit.xml
+++ b/app/src/main/res/drawable/style_textedit.xml
@@ -2,17 +2,17 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff" />
-            <stroke android:width="2dp" android:color="#4d4d4d" />
-            <corners android:radius="2dp" />
+            <solid android:color="@color/white" />
+            <stroke android:width="@dimen/setting_text_edit_stroke" android:color="@color/dark_gray" />
+            <corners android:radius="@dimen/setting_text_edit_corners" />
         </shape>
     </item>
 
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff" />
-            <stroke android:width="2dp" android:color="#C0C0C0" />
-            <corners android:radius="2dp" />
+            <solid android:color="@color/white" />
+            <stroke android:width="@dimen/setting_text_edit_stroke" android:color="@color/light_gray" />
+            <corners android:radius="@dimen/setting_text_edit_corners" />
         </shape>
     </item>
 
