--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -6,22 +6,22 @@
     <data>
         <variable
             name="viewmodel"
-            type="com.example.greetingcard.ui.firstwindow.FirstFragmentViewModel" />
+            type="com.example.greetingcard.ui.firstwindow.SettingFragmentViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/root_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.firstwindow.FirstFragment">
+        tools:context=".ui.firstwindow.SettingFragment">
 
         <ImageView
             android:id="@+id/bg_image"
-            android:onClick="@{() -> viewmodel.onBackgroundClick()}"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:onClick="@{() -> viewmodel.onBackgroundClick()}"
             android:scaleType="centerCrop"
-            android:src="@drawable/background_snow"/>
+            tools:src="@drawable/background_snow" />
 
         <TextView
             android:id="@+id/nameTextView"
@@ -91,7 +91,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textTextView" />
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imageView"
+            android:id="@+id/avatar"
             android:layout_width="113dp"
             android:layout_height="115dp"
             android:layout_marginTop="16dp"
@@ -107,7 +107,7 @@
             android:layout_marginTop="12dp"
             android:background="@drawable/style_test_btn"
             android:onClick="@{() -> viewmodel.onTestButtonClick()}"
-            android:text="Test"
+            android:text="@string/setting_btn_test"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="18sp"
@@ -121,7 +121,7 @@
             android:layout_width="140dp"
             android:layout_height="40dp"
             android:layout_marginTop="14dp"
-            android:text="Launch"
+            android:text="@string/setting_btn_launch"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="18sp"
@@ -129,26 +129,28 @@
             app:layout_constraintStart_toStartOf="@+id/button"
             app:layout_constraintTop_toBottomOf="@+id/button" />
 
-        <ImageButton
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-            app:layout_constraintEnd_toStartOf="@+id/imageView2"
-            app:layout_constraintTop_toTopOf="@+id/imageView2" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/previousIconBtn"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:onClick="@{() -> viewmodel.onPreviousBtnClick()}"
+            android:src="@drawable/arrow_left"
+            app:layout_constraintBottom_toBottomOf="@+id/iconImage"
+            app:layout_constraintEnd_toStartOf="@+id/iconImage"
+            app:layout_constraintTop_toTopOf="@+id/iconImage" />
 
-        <ImageButton
-            android:id="@+id/button4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toTopOf="@+id/imageView2" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/nextIconBtn"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:onClick="@{() -> viewmodel.onNextBtnClick()}"
+            android:src="@drawable/arrow_right"
+            app:layout_constraintBottom_toBottomOf="@+id/iconImage"
+            app:layout_constraintStart_toEndOf="@id/iconImage"
+            app:layout_constraintTop_toTopOf="@+id/iconImage" />
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/iconImage"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="20dp"
